# stream_proxy

./: .gitignore  Cargo.toml  README.md  go.mod  package.json  requirements-basic.txt  requirements.txt
config/: default.yml  development.yaml
docker/: Dockerfile  docker-compose.yml  start.sh
docs/: ARCHITECTURE.md  CAMERA_STREAMING_FIXES.md  CODERABBIT_FIXES.md  MEDIAMTX_COMPARISON.md  REQUIREMENTS.md  USAGE.md
examples/: multi_camera_ros.rs
scripts/: build.sh  ros_bridge.py  test-setup.sh  test.sh  test_platform.sh  test_server.py
src/: lib.rs
src/adapters/: Cargo.toml  lib.rs
src/core/: Cargo.toml  config.rs  engine.rs  lib.rs  main.rs  rtsp_server.rs  server.rs
src/core/engine/: cache.rs  pipeline.rs  sources.rs
src/formats/: Cargo.toml  lib.rs
src/ros/: mod.rs  ros_publisher.rs
tests/unit/: test_config.rs
web/: README.md  test-dashboard.html  test-platform.html
