[package]
name = "camera-stream-core"
version = "0.1.0"
edition = "2021"
authors = ["Camera Stream Team <team@example.com>"]
description = "Core streaming engine for camera stream proxy"
license = "MIT"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# GStreamer bindings
gstreamer = "0.21"
gstreamer-app = "0.21"
gstreamer-rtsp-server = "0.21" 
gstreamer-video = "0.21"

# Network and web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Memory management and performance
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
bytes = "1.5"

# Hashing and compression
xxhash-rust = { version = "0.8", features = ["xxh64"] }
lz4_flex = "0.11"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.21"

# Binary serialization
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "camera_stream_core"
path = "lib.rs"

[features]
default = ["gstreamer-plugins"]
gstreamer-plugins = []
hardware-accel = ["gstreamer/v1_20"]

[[bin]]
name = "stream-engine"
path = "main.rs" 